# poetry_example

./: .gitignore  .mypy.ini  .pylintrc  Dockerfile  README.md  pyproject.toml
devtools/: build.py
poetry_example/: calculation.py  data.py  main.py  utils.py
tests/: test_calculation.py  test_data.py
